--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 services:
   frontend:
     build:
-      context: ../frontend
+      context: ../
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     volumes:
-      - ../frontend:/app
+      - ../:/app
     environment:
       - NODE_ENV=production
     depends_on:
@@ -16,11 +16,11 @@ services:
 
   backend:
     build:
-      context: ../backend
+      context: ../api
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
     volumes:
-      - ../backend:/app
+      - ../api:/app
     environment:
       - PYTHONUNBUFFERED=1
